--- a/01-Introduccion_Programacion_Web_ASPNET_Core/Seccion01/Views/Shared/_Layout.cshtml
+++ b/01-Introduccion_Programacion_Web_ASPNET_Core/Seccion01/Views/Shared/_Layout.cshtml
@@ -17,7 +17,7 @@
                         aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
                 </button>
-                <div class="navbar-collapse collapse d-sm-inline-flex justify-content-between">
+                <nav class="navbar-collapse collapse d-sm-inline-flex justify-content-between">
                     <ul class="navbar-nav flex-grow-1">
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Index">Home</a>
@@ -25,8 +25,11 @@
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
                         </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="ExampleView">Example View</a>
+                        </li>
                     </ul>
-                </div>
+                </nav>
             </div>
         </nav>
     </header>
