--- a/01-Introduccion_Programacion_Web_ASPNET_Core/Seccion01/Views/Shared/_Layout.cshtml
+++ b/01-Introduccion_Programacion_Web_ASPNET_Core/Seccion01/Views/Shared/_Layout.cshtml
@@ -28,6 +28,9 @@
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="ExampleView">Example View</a>
                         </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Country" asp-action="Index">Countries</a>
+                        </li>
                     </ul>
                 </nav>
             </div>
