--- a/01-Introduccion_Programacion_Web_ASPNET_Core/Seccion01/Views/Country/ListCountries.cshtml
+++ b/01-Introduccion_Programacion_Web_ASPNET_Core/Seccion01/Views/Country/ListCountries.cshtml
@@ -1,7 +1,23 @@
+@using Seccion01.Classes;
+
 @{
     ViewData["Title"] = "ListCountries";
 
     string[] someCountries = { "Colombia", "Ecuador", "Pánama", "Vezuela"};
+    
+    List<AmbassadorClass> ambassadors = new List<AmbassadorClass>
+    {
+        new AmbassadorClass
+        {
+            name = "David Ferrer",
+            country = "República de Colombia"
+        },
+        new AmbassadorClass
+        {
+            name = "Jackie Chan",
+            country = "China"
+        }
+    };
 }
 
 <h1>Listado de Países</h1>
@@ -13,3 +29,23 @@
         <li>@country.ToUpper()</li>
     }
 </ul>
+
+<h3>Algunos embajadores:</h3>
+
+<table class="table">
+    <thead>
+        <tr>
+            <th>Nombre</th>
+            <th>País</th>
+        </tr>
+    </thead>
+
+    <tbody>
+        @foreach(AmbassadorClass ambassador in ambassadors) {
+            <tr>
+                <td>@ambassador.name</td>
+                <td>@ambassador.country</td>
+            </tr>
+        }
+    </tbody>
+</table>
