Fix Syntax Error

--- a/01-Introduccion_Programacion_Web_ASPNET_Core/Section01/Views/Shared/_Layout.cshtml
+++ b/01-Introduccion_Programacion_Web_ASPNET_Core/Section01/Views/Shared/_Layout.cshtml
@@ -23,8 +23,7 @@
             asp-area=""
             asp-controller="Home"
             asp-action="Index"
-            >Section01</a
-          >
+            >Section01</a>
           <button
             class="navbar-toggler"
             type="button"
@@ -46,8 +45,7 @@
                   asp-area=""
                   asp-controller="Home"
                   asp-action="Index"
-                  >Home</a
-                >
+                  >Home</a>
               </li>
               <li class="nav-item">
                 <a
@@ -55,8 +53,7 @@
                   asp-area=""
                   asp-controller="Home"
                   asp-action="Privacy"
-                  >Privacy</a
-                >
+                  >Privacy</a>
               </li>
               <li class="nav-item">
                 <a
@@ -64,8 +61,7 @@
                   asp-area=""
                   asp-controller="Home"
                   asp-action="ExampleView"
-                  >Example View</a
-                >
+                  >Example View</a>
               </li>
               <li class="nav-item">
                 <a
@@ -73,8 +69,7 @@
                   asp-area=""
                   asp-controller="Country"
                   asp-action="Index"
-                  >Countries</a
-                >
+                  >Countries</a>
               </li>
             </ul>
           </nav>
