Add Tag Display en Entity Framework

--- a/02-Introduccion_Manejo_Bases_Datos/Section02/Views/Persona/Index.cshtml
+++ b/02-Introduccion_Manejo_Bases_Datos/Section02/Views/Persona/Index.cshtml
@@ -11,10 +11,10 @@
 <table class="table">
     <thead class="thead-dark">
         <tr>
-            <th>Id Persona</th>
-            <th>Nombre Completo</th>
-            <th>Email</th>
-            <th>Sexo</th>
+            <th>@Html.DisplayNameFor(model => model.iidPersona)</th>
+            <th>@Html.DisplayNameFor(model => model.nombreCompleto)</th>
+            <th>@Html.DisplayNameFor(model => model.email)</th>
+            <th>@Html.DisplayNameFor(model => model.nombreSexo)</th>
         </tr>
     </thead>
 
