--- a/02-Introduccion_Manejo_Bases_Datos/Section02/Views/Shared/_Layout.cshtml
+++ b/02-Introduccion_Manejo_Bases_Datos/Section02/Views/Shared/_Layout.cshtml
@@ -31,6 +31,10 @@
                                 <a class="nav-link text-dark" asp-area="" asp-controller="Especialidad"
                                     asp-action="Index">Especialidades</a>
                             </li>
+                            <li class="nav-item">
+                                <a class="nav-link text-dark" asp-area="" asp-controller="Sede"
+                                    asp-action="Index">Sedes</a>
+                            </li>
                         </ul>
                     </div>
                 </div>
