Add Tarea: Listado de `pagina` y `medicamento`

--- a/02-Introduccion_Manejo_Bases_Datos/Section02/Views/Shared/_Layout.cshtml
+++ b/02-Introduccion_Manejo_Bases_Datos/Section02/Views/Shared/_Layout.cshtml
@@ -35,6 +35,14 @@
                                 <a class="nav-link text-dark" asp-area="" asp-controller="Sede"
                                     asp-action="Index">Sedes</a>
                             </li>
+                            <li class="nav-item">
+                                <a class="nav-link text-dark" asp-area="" asp-controller="Pagina"
+                                    asp-action="Index">Páginas</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link text-dark" asp-area="" asp-controller="Medicamento"
+                                    asp-action="Index">Medicamentos</a>
+                            </li>
                         </ul>
                     </div>
                 </div>
