--- a/02-Introduccion_Manejo_Bases_Datos/Section02/Views/Medicamento/Index.cshtml
+++ b/02-Introduccion_Manejo_Bases_Datos/Section02/Views/Medicamento/Index.cshtml
@@ -2,10 +2,11 @@
 @model IEnumerable<MedicamentoClass>
 
 @{
-    ViewData["Title"] = "Medicamentos";
+    string title = ViewBag.Title;
+    ViewData["Title"] = title;
 }
 
-<h1>Lisado de Medicamentos</h1>
+<h1>@title</h1>
 
 <table class="table">
     <thead class="thead-dark">
