--- a/03-Uso_de_filtros/Section03/Views/Especialidad/Index.cshtml
+++ b/03-Uso_de_filtros/Section03/Views/Especialidad/Index.cshtml
@@ -11,10 +11,9 @@
 
 
 <form id="form" method="POST" aps-controller="Especialidad" asp-action="Index" class="my-3"
-    style="display: grid; grid-template-columns: 1fr 2fr 1fr 1fr; gap: 1rem;">
+    style="display: grid; grid-template-columns: 1fr 2fr 1fr; gap: 1rem;">
     <label for="name">Ingrese nombre de la especialid</label>
-    <input type="text" name="Nombre" id="name" value="@nombreEspecialidad" class="form form-control">
-    <button type="submit" class="btn btn-success">Buscar</button>
+    <input type="text" name="Nombre" id="name" value="@nombreEspecialidad" class="form form-control" onkeyup="search()">
     <button type="button" class="btn btn-info" onclick="clean()">Limpiar</button>
 </form>
 
@@ -44,6 +43,10 @@
 <script>
     function clean () {
         document.getElementById("name").value = "";
+        document.getElementById("form").submit()
+    }
+
+    function search() {
         document.getElementById("form").submit()
     }
 </script>
