Add Datos de ComboBox desde la DB

--- a/03-Uso_de_filtros/Section03/Views/Shared/_Layout.cshtml
+++ b/03-Uso_de_filtros/Section03/Views/Shared/_Layout.cshtml
@@ -27,6 +27,10 @@
                                 <a class="nav-link text-dark" asp-area="" asp-controller="Especialidad"
                                     asp-action="Index">Especialidades</a>
                             </li>
+                            <li class="nav-item">
+                                <a class="nav-link text-dark" asp-area="" asp-controller="Persona"
+                                    asp-action="Index">Personas</a>
+                            </li>
                         </ul>
                     </div>
                 </div>
